@@ -9,15 +9,13 @@
 	<parent>
 		<groupId>de.dktk.dd.rpb</groupId>
 		<artifactId>rpb-parent</artifactId>
-		<version>MAINLINE-SNAPSHOT</version>
+		<version>1.0.0.14</version>
 	</parent>
 	<artifactId>radplanbio-portal</artifactId>
 	<packaging>war</packaging>
 	<name>radplanbio-portal</name>
 	<description>RadPlanBio Portal</description>
-	<prerequisites>
-		<maven>2.2.0</maven>
-	</prerequisites>
+
 	<properties>
 		<!-- ~~~~~~~~ -->
 		<!-- Database -->
@@ -66,7 +64,9 @@
 		<jsf-api.version>2.1.24</jsf-api.version> <!-- 2.1.24 -> 2.2.16 -->
 		<primefaces.version>6.1</primefaces.version> <!-- 6.1 -> 6.2 -->
 		<omnifaces.version>1.8.1</omnifaces.version> <!-- 1.8.1 -> 2.6.9 -->
-		<slf4j.version>1.5.10</slf4j.version>
+		<dcm4che.version>5.25.2</dcm4che.version> <!-- 1.8.1 -> 2.6.9 -->
+		<slf4j.version>1.7.36</slf4j.version>
+		<log4j.version>2.17.2</log4j.version>
 
 		<!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
 		<!-- Variables substituted in resources file at build time -->
@@ -244,7 +244,7 @@
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>radplanbio-core</artifactId>
-			<version>MAINLINE-SNAPSHOT</version>
+			<version>1.0.0.14</version>
 		</dependency>
 
 		<dependency>
@@ -346,7 +346,7 @@
 		<dependency> <!-- validation html -->
 			<groupId>org.jsoup</groupId>
 			<artifactId>jsoup</artifactId>
-			<version>1.7.2</version>
+			<version>1.15.3</version>
 		</dependency>
 
         <!-- ~~~~~~~~~ -->
@@ -381,34 +381,25 @@
 		<!-- LOGGER -->
 		<!-- ~~~~~~ -->
 		<dependency>
-			<groupId>log4j</groupId>
-			<artifactId>log4j</artifactId>
-			<version>1.2.15</version>
-			<exclusions>
-				<exclusion>
-					<groupId>javax.jms</groupId>
-					<artifactId>jms</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>com.sun.jdmk</groupId>
-					<artifactId>jmxtools</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>com.sun.jmx</groupId>
-					<artifactId>jmxri</artifactId>
-				</exclusion>
-			</exclusions>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-api</artifactId>
+			<version>${log4j.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-api</artifactId>
-			<version>${slf4j.version}</version>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-core</artifactId>
+			<version>${log4j.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-log4j12</artifactId>
-			<version>${slf4j.version}</version>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-slf4j-impl</artifactId>
+			<version>${log4j.version}</version>
 		</dependency>
+<!--		<dependency>-->
+<!--			<groupId>org.slf4j</groupId>-->
+<!--			<artifactId>slf4j-api</artifactId>-->
+<!--			<version>${slf4j.version}</version>-->
+<!--		</dependency>-->
 
 		<!-- ~~~~~ -->
 		<!-- UTILS -->
@@ -421,7 +412,7 @@
 		<dependency>
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
-			<version>2.1</version>
+			<version>2.7</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-lang</groupId>
@@ -431,7 +422,7 @@
 		<dependency>
 			<groupId>commons-fileupload</groupId>
 			<artifactId>commons-fileupload</artifactId>
-			<version>1.3.3</version>
+			<version>1.5</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-codec</groupId>
@@ -441,15 +432,26 @@
         <dependency>
             <groupId>org.json</groupId>
             <artifactId>json</artifactId>
-            <version>20070829</version>
+            <version>20230227</version>
         </dependency>
         <!--Helper to copy and access properties-->
         <!-- https://mvnrepository.com/artifact/commons-beanutils/commons-beanutils -->
         <dependency>
             <groupId>commons-beanutils</groupId>
             <artifactId>commons-beanutils</artifactId>
-            <version>1.9.3</version>
+            <version>1.9.4</version>
         </dependency>
+		<dependency>
+			<groupId>com.sun.mail</groupId>
+			<artifactId>jakarta.mail</artifactId>
+			<version>1.6.7</version>
+			<exclusions>
+				<exclusion>
+					<artifactId>log4j</artifactId>
+					<groupId>log4j</groupId>
+				</exclusion>
+			</exclusions>
+		</dependency>
 
 	    <!-- ~~~~~~ -->
 		<!-- SPRING -->
@@ -649,38 +651,14 @@
 		</dependency>
 
         <!-- ~~~~~~~~~~~~~~~~~ -->
-        <!-- SOAP WEB SERVICES - exclude spring framework and javax.servlet api because it was already added-->
+        <!-- SOAP WEB SERVICES -->
         <!-- ~~~~~~~~~~~~~~~~~ -->
         <dependency>
             <groupId>org.jvnet.jax-ws-commons.spring</groupId>
             <artifactId>jaxws-spring</artifactId>
-            <version>1.8</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>javax.servlet</groupId>
-                    <artifactId>servlet-api</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>org.springframework</groupId>
-                    <artifactId>spring</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>org.springframework</groupId>
-                    <artifactId>spring-core</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>org.springframework</groupId>
-                    <artifactId>spring-context</artifactId>
-                </exclusion>
-            </exclusions>
+            <version>1.9</version>
         </dependency>
-        <!-- This is necessary for web service to work also (somehow this library was missing in the deploy environment) -->
-        <dependency>
-            <groupId>com.sun.xml.bind</groupId>
-            <artifactId>jaxb-impl</artifactId>
-            <version>2.1.3</version>
-            <scope>compile</scope>
-        </dependency>
+
 		<dependency>
 			<groupId>com.sun.xml.security</groupId>
 			<artifactId>xml-security-impl</artifactId>
@@ -710,15 +688,10 @@
 			<artifactId>jersey-server</artifactId>
 			<version>1.18.1</version>
 		</dependency>
-		<dependency>
-			<groupId>com.sun.jersey</groupId>
-			<artifactId>jersey-core</artifactId>
-			<version>1.18.1</version>
-		</dependency>
         <dependency>
             <groupId>com.sun.jersey</groupId>
             <artifactId>jersey-json</artifactId>
-            <version>1.8</version>
+            <version>1.18.1</version>
         </dependency>
 		<dependency>
 			<groupId>com.sun.jersey.contribs</groupId>
@@ -805,30 +778,25 @@
 			<version>2.3.1</version>
 		</dependency>
 
-		<!-- https://mvnrepository.com/artifact/com.univocity/univocity-parsers -->
-		<dependency>
-			<groupId>com.univocity</groupId>
-			<artifactId>univocity-parsers</artifactId>
-			<version>2.1.1</version>
-		</dependency>
-
 		<!-- ~~~~~ -->
 		<!-- DICOM -->
 		<!-- ~~~~~ -->
 		<dependency>
 			<groupId>org.dcm4che</groupId>
 			<artifactId>dcm4che-core</artifactId>
-			<version>5.13.0</version>
+			<version>${dcm4che.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.dcm4che</groupId>
 			<artifactId>dcm4che-image</artifactId>
-			<version>5.13.0</version>
+			<version>${dcm4che.version}</version>
+
 		</dependency>
 		<dependency>
 			<groupId>org.dcm4che</groupId>
 			<artifactId>dcm4che-net</artifactId>
-			<version>5.13.0</version>
+			<version>${dcm4che.version}</version>
+
 		</dependency>
 
 		<!-- ~~~~~~ -->
@@ -952,6 +920,19 @@
 							</rules>
 						</configuration>
 					</execution>
+					<execution>
+						<id>enforce-maven</id>
+						<goals>
+							<goal>enforce</goal>
+						</goals>
+						<configuration>
+							<rules>
+								<requireMavenVersion>
+									<version>2.2.0</version>
+								</requireMavenVersion>
+							</rules>
+						</configuration>
+					</execution>
 				</executions>
 			</plugin>
 			<plugin>
@@ -965,24 +946,22 @@
 				</configuration>
 			</plugin>
 			<plugin>
-				<!-- http://wiki.eclipse.org/Jetty/Feature/Jetty_Maven_Plugin -->
-				<groupId>org.mortbay.jetty</groupId>
+				<!-- https://www.eclipse.org/jetty/documentation/jetty-9/index.html#jetty-maven-plugin -->
+				<groupId>org.eclipse.jetty</groupId>
 				<artifactId>jetty-maven-plugin</artifactId>
-				<version>7.6.7.v20120910</version>
+				<version>9.2.11.v20150529</version>
 				<configuration>
 					<stopKey>foo</stopKey>
 					<stopPort>9999</stopPort>
 					<webAppConfig>
 						<contextPath>${application.contextpath}</contextPath>
 						<baseResource implementation="org.eclipse.jetty.util.resource.ResourceCollection">
-							<resourcesAsCSV>src/main/webapp/,${maven-celerio-plugin.outputDir}/src/main/webapp/</resourcesAsCSV>
+							<resourcesAsCSV>radplanbio-portal/src/main/webapp/,${maven-celerio-plugin.outputDir}/src/main/webapp/</resourcesAsCSV>
 						</baseResource>
 					</webAppConfig>
-					<connectors>
-						<connector implementation="org.eclipse.jetty.server.nio.SelectChannelConnector">
-							<port>${application.port}</port>
-						</connector>
-					</connectors>
+					<httpConnector>
+						<port>${application.port}</port>
+					</httpConnector>
 					<requestLog implementation="org.eclipse.jetty.server.NCSARequestLog">
 						<filename>${project.build.directory}/jetty-yyyy_mm_dd-request.log</filename>
 						<retainDays>3</retainDays>
@@ -998,9 +977,6 @@
 						<goals>
 							<goal>run</goal>
 						</goals>
-						<configuration>
-							<daemon>true</daemon>
-						</configuration>
 					</execution>
 					<execution>
 						<id>stop-jetty</id>
@@ -1094,7 +1070,7 @@
                 <version>3.0.0-M3</version>
 				<configuration>
 					<!-- surefire uses a new jvm, MAVEN_OPTS are ignored, so you better set the memory options here -->
-                    <argLine>-Xmx512m -XX:MaxPermSize=256m -Dlog4j.warn</argLine>
+                    <argLine>-Xmx512m -Dlog4j.warn</argLine>
 				</configuration>
 			</plugin>
 			<plugin>
